# md-crdt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  justfile
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benches/: performance.rs
docs/: FUZZING.md  architecture-evolution-plan-state.md  architecture-evolution.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: apply_changes.rs  decode_changes.rs  merge_convergence.rs  parser.rs
md-crdt-ci/: Cargo.toml
md-crdt-ci/src/: lib.rs
md-crdt-ci/tests/: smoke_test.rs
md-crdt-cli/: Cargo.toml
md-crdt-cli/src/: main.rs
md-crdt-cli/tests/: status.rs  sync.rs
md-crdt-core/: Cargo.toml
md-crdt-core/benches/: sequence.rs
md-crdt-core/src/: lib.rs
md-crdt-core/tests/: core_types.rs  determinism_dc2.rs  differential_tests.proptest-regressions  differential_tests.rs  map_and_lww.proptest-regressions  map_and_lww.rs  mark_crdt.rs  mark_diff.rs  mark_interval.rs  mark_invariants.rs  mark_properties.proptest-regressions  mark_properties.rs  proptest_config.rs  rga_buffering.rs  rga_edge_cases.rs  rga_interleaving.rs  rga_invariants.rs  rga_properties.proptest-regressions  rga_properties.rs  rga_unicode.rs  sequence.proptest-regressions  sequence.rs
md-crdt-doc/: Cargo.toml
md-crdt-doc/benches/: keystroke.rs  nfr.rs
md-crdt-doc/src/: lib.rs
md-crdt-doc/tests/: commonmark_spec.rs  determinism.rs  external_fixtures.rs  memory_dhat.rs  merge_behavior.rs  round_trip.rs  table_model.rs
md-crdt-doc/tests/fixtures/: gfm-spec-fixtures.json  markdown-it-fixtures.json
md-crdt-ffi/: Cargo.toml
md-crdt-ffi/src/: lib.rs
md-crdt-ffi/tests/: packaging_contract.rs
md-crdt-filesync/: Cargo.toml
md-crdt-filesync/src/: lib.rs
md-crdt-filesync/tests/: vault.rs
md-crdt-naive-oracle/: Cargo.toml
md-crdt-naive-oracle/src/: lib.rs
md-crdt-storage/: Cargo.toml
md-crdt-storage/src/: lib.rs
md-crdt-sync/: Cargo.toml
md-crdt-sync/benches/: nfr.rs
md-crdt-sync/src/: lib.rs
md-crdt-sync/tests/: differential_sync.rs
src/: lib.rs  workspace.rs
src/codec/: mod.rs  wire.rs
src/core/: mark.rs  mod.rs
src/doc/: frontmatter.rs  inline.rs  mark_ops.rs  mod.rs  parser.rs  serialize.rs  source.rs  text.rs
src/filesync/: diff.rs  mod.rs  session.rs
src/session/: mod.rs  snapshot.rs  wire.rs
src/storage/: mod.rs
src/sync/: mod.rs  validation.rs
tests/: codec_roundtrip.rs  core_determinism_dc2.rs  core_differential.rs  core_map_and_lww.rs  core_mark_crdt.rs  core_mark_diff.rs  core_mark_interval.rs  core_mark_invariants.rs  core_mark_properties.rs  core_rga_buffering.rs  core_rga_edge_cases.rs  core_rga_interleaving.rs  core_rga_invariants.rs  core_rga_properties.rs  core_rga_unicode.rs  core_sequence.rs  core_types.rs  doc_block_id.rs  doc_commonmark_spec.rs  doc_determinism.rs  doc_external_fixtures.rs  doc_lossless_source.rs  doc_memory_dhat.rs  doc_merge_behavior.rs  doc_round_trip.rs  doc_structured_blocks.rs  doc_table_model.rs  doc_text_units.rs  filesync_export.rs  filesync_ingest.rs  filesync_vault.rs  filesync_vault_session.rs  module_boundaries.rs  performance_indices.rs  phase_j_semantics.rs  session_checkpoint.rs  session_collab.rs  session_snapshot.rs  session_split_merge.rs  session_table_ops.rs  (+15 more)
tests/fixtures/: all-external-fixtures.json  comrak-fixtures.json  list-inline-marks.md  workspace-contract-v1.json  workspace-contract-v2.json  workspace-contract-v3.json  workspace-contract-v5.json  workspace-projection-transcript-v1.json  workspace-projection-transcript-v2.json  workspace-projection-transcript-v3.json
