[package]
name = "md-crdt-fuzz"
version = "0.0.0"
edition = "2024"
license = "MIT"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
md-crdt-doc = { path = "../md-crdt-doc" }
md-crdt-sync = { path = "../md-crdt-sync" }
md-crdt-core = { path = "../md-crdt-core" }
postcard = { version = "1", features = ["alloc"] }
uuid = { version = "1", features = ["v4"] }

[workspace]

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"

[[bin]]
name = "apply_changes"
path = "fuzz_targets/apply_changes.rs"

[[bin]]
name = "decode_changes"
path = "fuzz_targets/decode_changes.rs"

[[bin]]
name = "merge_convergence"
path = "fuzz_targets/merge_convergence.rs"
