[package]
name = "md-crdt-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "md-crdt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
md-crdt-filesync = { version = "0.1.0", path = "../md-crdt-filesync" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
serde_json = "1.0.149"
tempfile = "3.24.0"
