[package]
name = "md-crdt-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
md-crdt-naive-oracle = { path = "../md-crdt-naive-oracle" }
proptest = "1.9.0"
criterion = "0.5.1"

[[bench]]
name = "sequence"
harness = false
