[package]
name = "md-crdt-doc"
version = "0.1.0"
edition = "2024"

[dependencies]
md-crdt-core = { path = "../md-crdt-core" }
thiserror = "2.0"
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "keystroke"
harness = false
