[package]
name = "md-crdt-doc"
version = "0.1.0"
edition = "2024"

[dependencies]
md-crdt-core = { path = "../md-crdt-core" }
thiserror = "2.0"
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
criterion = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
dhat-heap = ["dhat"]

[[bench]]
name = "keystroke"
harness = false

[[bench]]
name = "nfr"
harness = false
