[package]
name = "md-crdt-doc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/latenty-infinity/md-crdt"
description = "Markdown document model with CRDT-based collaborative editing"
readme = "../README.md"
keywords = ["markdown", "crdt", "parser", "collaborative", "document"]
categories = ["parsing", "text-processing"]

[dependencies]
md-crdt-core = { version = "0.1.0", path = "../md-crdt-core" }
thiserror = "2.0"
unicode-segmentation = "1.12.0"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
dhat = { version = "0.3.3", optional = true }

[dev-dependencies]
criterion = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
dhat-heap = ["dhat"]

[[bench]]
name = "keystroke"
harness = false

[[bench]]
name = "nfr"
harness = false
