[package]
name = "md-crdt-ffi"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/latenty-infinity/md-crdt"
description = "Unpublished workspace placeholder for future md-crdt foreign-language bindings"
readme = "../README.md"
publish = false

[dependencies]
