[package]
name = "md-crdt-filesync"
version = "0.1.0"
edition = "2024"

[dependencies]
md-crdt-doc = { path = "../md-crdt-doc" }
md-crdt-storage = { path = "../md-crdt-storage" }
thiserror = "2.0.18"
tracing = "0.1"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
tempfile = "3.24.0"
