[package]
name = "md-crdt-filesync"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/latenty-infinity/md-crdt"
description = "File system synchronization for markdown vaults"
readme = "../README.md"
keywords = ["filesync", "vault", "markdown", "sync", "obsidian"]
categories = ["filesystem"]

[dependencies]
md-crdt-doc = { version = "0.1.0", path = "../md-crdt-doc" }
md-crdt-storage = { version = "0.1.0", path = "../md-crdt-storage" }
thiserror = "2.0.18"
tracing = "0.1"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
rkyv = "0.8"

[dev-dependencies]
tempfile = "3.24.0"
