[package]
name = "md-crdt-naive-oracle"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/latenty-infinity/md-crdt"
description = "Naive reference implementation for differential testing"
publish = false

[dependencies]
md-crdt-core = { version = "0.1.0", path = "../md-crdt-core" }
