[package]
name = "md-crdt-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/latenty-infinity/md-crdt"
description = "Persistent storage layer for CRDT documents"
readme = "../README.md"
keywords = ["storage", "persistence", "crdt", "crash-safe", "checkpoint"]
categories = ["filesystem", "database-implementations"]

[dependencies]
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }
rkyv = "0.8"
crc32fast = "1.5.0"

[dev-dependencies]
tempfile = "3.24.0"
